--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -29,8 +29,7 @@
     <string name="alarms">Alarms</string>
     <string name="style">Style</string>
 
-    <string name="holo" translatable="false">Holo</string>
-    <string name="default_tag">(Default)</string>
+    <string name="holo_default">Holo (Default)</string>
 
     <string name="apply">Apply</string>
     <string name="applying">Applying\u2026</string>
@@ -51,22 +50,4 @@
     <string name="theme_installed_notification_title">%s installed</string>
     <string name="theme_installed_notification_text">Theme successfully installed.</string>
 
-    <string name="menu_item_get_more_themes">Get more</string>
-
-    <!-- Shown when the user clicks 'Get More' button from the themes list screen -->
-    <string name="get_more_description">You can get more themes from the following links:</string>
-
-    <!-- Themes Showcase Entry Names. Change this array only if you change the Entry URL -->
-    <string-array name="get_more_entry_names">
-        <item>CyanogenMod Themes Showcase</item>
-        <item>Play Store</item>
-        <item>More info on the CM Wiki</item>
-    </string-array>
-
-    <!-- Themes Showcase Entry URLS. Change this array only if you also change the Entry Name -->
-    <string-array name="get_more_entry_urls" translatable="false">
-        <item>https://play.google.com/store/apps/details?id=com.cyngn.theme.store</item>
-        <item>https://play.google.com/store/search?q=theme+engine&amp;c=apps</item>
-        <item>http://wiki.cyanogenmod.org/w/Themes</item>
-    </string-array>
 </resources>
